<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grelp</string>
    <string name="title_activity_yelp">YelpActivity</string>
    <string name="title_activity_groupon_detail"> </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Grelp</string>
    <string name="section_format">Map goes here</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="more_reviews"><![CDATA[more reviews >>]]></string>
    <string name="show_deals">Show Deals</string>
    <string name="show_map">Show Map</string>
    <string name="fs_title">Four Square</string>
    <string name="fs_tip_message">What you need to know</string>
    <string name="num_reviews_parenthesis">(%d)</string>
    <plurals name="number_of_reviews">
        <item quantity="zero">No reviews</item>
        <item quantity="one">%d review</item>
        <item quantity="other">%d reviews</item>
    </plurals>
    <plurals name="number_of_locations">
        <item quantity="zero">No Locations</item>
        <item quantity="one">%d Location</item>
        <item quantity="other">%d Locations</item>
    </plurals>
    <string name="title_activity_four_square">FourSquareActivity</string>
    <string name="yelp">Yelp</string>
    <string name="yelp_ratings">Yelp Reviews</string>
    <string name="open_yelp"><![CDATA[Open Yelp >]]></string>
    <string name="open_in_google"><![CDATA[Open Maps >]]></string>
    <string name="open_foursquare"><![CDATA[Open FourSquare >]]></string>
    <string name="google_label">Google</string>
    <string name="fs_rating_title">Four Square Rating</string>
    <string name="fs_phrases_header">What they said</string>
    <string name="example_phone_number">555-5555</string>
    <string name="buy">Buy</string>
    <string name="google_ratings">Google Rating</string>
    <string name="no_data_avail_for">No Data available for %s</string>
    <string name="no_rating">No rating available</string>
</resources>
