<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <View
        android:layout_width="match_parent"
        android:padding="2dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivGoogleMapImage"
            android:contextClickable="false"
            android:src="@drawable/ic_google_maps"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/google_label"
            android:id="@+id/tvGoogleLabel"
            android:layout_toRightOf="@+id/ivGoogleMapImage"
            android:layout_toEndOf="@+id/ivGoogleMapImage"
            android:gravity="center_vertical"
            android:layout_alignBottom="@+id/ivGoogleMapImage"
            android:layout_alignTop="@+id/ivGoogleMapImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:id="@+id/tvName"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:ellipsize="end"
            android:layout_weight="0.84"
            android:maxLines="2"
            android:layout_toLeftOf="@+id/tvOpenGoogle"
            android:layout_below="@+id/ivGoogleMapImage"
            android:layout_alignLeft="@+id/ivGoogleMapImage"
            android:layout_alignStart="@+id/ivGoogleMapImage"
            android:paddingBottom="5dp"
            android:layout_marginLeft="70dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_in_google"
            android:textColor="@color/green_text"
            android:textStyle="bold"
            android:id="@+id/tvOpenGoogle"
            android:clickable="true"
            android:onClick="onClickOpenGoogle"
            android:gravity="right"
            android:layout_alignTop="@+id/tvName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/tvName"
            android:layout_marginRight="15dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbRating"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:layout_alignLeft="@+id/tvPhone"
            android:layout_alignStart="@+id/tvPhone"
            android:layout_below="@+id/tvPhone"
            android:progressTint="#d1c634"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/example_phone_number"
            android:id="@+id/tvPhone"
            android:layout_toEndOf="@+id/ivGoogleMapImage"
            android:layout_toRightOf="@+id/ivGoogleMapImage"
            android:drawableLeft="@android:drawable/ic_menu_call"
            android:layout_below="@+id/tvName"
            android:layout_alignLeft="@+id/tvName"
            android:layout_alignStart="@+id/tvName"
            android:paddingBottom="5dp"
            android:phoneNumber="true"
            android:clickable="true"
            android:inputType="phone"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:onClick="onClickPhone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:id="@+id/divider_buy"
            android:layout_below="@+id/rbRating"
            android:background="?android:attr/listDivider"
            />

    </RelativeLayout>
</LinearLayout>
